--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -329,19 +329,19 @@ JDP wrote the manuscript, wrote R and Stan code, as well as analysed and interpr
 
 \caption{Posterior Predictive Checks}
 
-\begin{tabular}{cccc} \hline
+\begin{tabular}{ccccc} \hline
 
-\textbf{Species} & \textbf{Variable} & \textbf{MLE} & \textbf{Bayes Est. (SD; 95\% CrI)} \\  \hline
+\textbf{Species} & \textbf{Variable} & $\textbf{\textit{Y}}$ & $\textbf{\textit{n}}$ & \textbf{Bayes Est. (SD; 95\% CrI)} \\  \hline
 
-\textit{A. bipustulatus} & $y_\mathrm{lwr}$ & 491401.000 & 491400.018 (1.378, 491396.000-491401.000) \\
-\textit{A. bipustulatus} & $y_\mathrm{upr}$ & 2804.000 & 2803.019 (1.433, 2799.000-2804.000) \\
-\textit{A. bipustulatus} & $y^{'}_\mathrm{lwr}$ & 491401.000 & 491400.008 (1.412, 491396.000-491401.000) \\
-\textit{A. bipustulatus} & $y^{'}_\mathrm{upr}$ & 2804.000 & 2802.992 (1.429, 2799.000-2804.000) \\
+\textit{A. bipustulatus} & $y_\mathrm{lwr}$ & 491401.000 & & 491400.018 (1.378, 491396.000-491401.000) \\
+\textit{A. bipustulatus} & $y_\mathrm{upr}$ & 2804.000 & & 2803.019 (1.433, 2799.000-2804.000) \\
+\textit{A. bipustulatus} & $y^{'}_\mathrm{lwr}$ & 491401.000 & & 491400.008 (1.412, 491396.000-491401.000) \\
+\textit{A. bipustulatus} & $y^{'}_\mathrm{upr}$ & 2804.000 & & 2802.992 (1.429, 2799.000-2804.000) \\
 
-\textit{A. nevadensis} & $y_\mathrm{lwr}$ & 4.000 & 3.355 (0.888, 1.000-4.000) \\
-\textit{A. nevadensis} & $y_\mathrm{upr}$ & 28.000  & 29.151 (7.620, 16.000-45.000) \\
-\textit{A. nevadensis} & $y^{'}_\mathrm{lwr}$ & 4.000 & 3.325 (1.000-4.000) \\
-\textit{A. nevadensis} & $y^{'}_\mathrm{upr}$ & 28.000  & 28.942 (15.000-45.000)  \\
+\textit{A. nevadensis} & $y_\mathrm{lwr}$ & 4.000 & & 3.355 (0.888, 1.000-4.000) \\
+\textit{A. nevadensis} & $y_\mathrm{upr}$ & 28.000 & & 29.151 (7.620, 16.000-45.000) \\
+\textit{A. nevadensis} & $y^{'}_\mathrm{lwr}$ & 4.000 & & 3.325 (1.000-4.000) \\
+\textit{A. nevadensis} & $y^{'}_\mathrm{upr}$ & 28.000 & & 28.942 (15.000-45.000)  \\
 
 
 \hline
