--- a/References.bib
+++ b/References.bib
@@ -1,3 +1,14 @@
+@article {bartlett1992fins,
+	Title = {FINS (forensically informative nucleotide sequencing): a procedure for identifying the animal origin of biological specimens},
+	Author = {Bartlett, SE and Davidson, WS},
+	Number = {3},
+	Volume = {12},
+	Month = {March},
+	Year = {1992},
+	Journal = {BioTechniques},
+	Pages = {408—411}
+}
+
 @article{bergsten2012effect,
   title={The effect of geographical scale of sampling on {DNA} barcoding},
   author={Bergsten, J and Bilton, DT and Fujisawa, T and Elliott, M and Monaghan, MT and Balke, M and Hendrich, L and Geijer, J and Herrmann, J and Foster, GN and Ribera, I and Nilsson, AN and Barraclough, TG and Vogler, AP},
@@ -8,6 +19,17 @@
   year={2012},
   month={10},
   doi={10.1093/sysbio/sys037}
+}
+
+@article{candek2015dna,
+author = {\u{C}andek, Klemen and Kuntner, Matjaž},
+title = {{DNA} barcoding gap: reliable species identification over morphological and geographical scales},
+journal = {Molecular Ecology Resources},
+volume = {15},
+number = {2},
+pages = {268-277},
+doi = {https://doi.org/10.1111/1755-0998.12304},
+year = {2015}
 }
 
 @article{carpenter2017stan,
